--- a/.env
+++ b/.env
@@ -1,16 +1,12 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://tanishq:tanishq@cluster0.nkkeqlb.mongodb.net/test"
-NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+DATABASE_URL=
+NEXTAUTH_SECRET=
 
-GITHUB_ID=ed6b3053815736dcec9f
-GITHUB_SECRET=4b96081a88a361a7627c040d4e1cc034117f8312
+GITHUB_ID=
+GITHUB_SECRET=
 
-GOOGLE_CLIENT_ID=898374333134-bu0obn3npfeppah8ph9c538ve0t9dkpn.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dr2hsvtcn"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
